made my page better
more photos a background and font color.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 	<title>Aidans Page</title>
-	<link rel="icon" href="assets/giphy.gif">
+	<link rel="icon" href="assets/game.png">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<img src="assets/giphy.gif" alt="Aidans Profile Picture">
 	<img src="assets/meow.jpeg" alt="Cat">
 	<img src="assets/cat from space.jpg" alt="ooo aaah">
-	<img src="assets/space.jpg" alt="meow">
-	<h1>Aidans 4 favorite apps/games</h1>
+	<"cmd" : I love coding!>	
+<h1>Aidans 4 favorite apps/games</h1>
 	<ol>
 		<li>minecraft</li>
 		<li>music.ly</li>
